name:                gosh
version:             0.1.0.0
synopsis:            GO game
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Yuriy Netesov
maintainer:          yuriy.netesov@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10


library
  hs-source-dirs: src
  default-language:    Haskell2010
  build-depends:       base >=4.8 && <4.9
                     , containers
                     , mtl
                     , text
  Exposed-modules:   Gosh.Go
                   , Gosh.Scoring
                   , Gosh.GameLoop
                   , Gosh.TerminalDrawer
                          
                     
executable gosh
  main-is:             Main.hs
  -- other-modules:       Gosh.Go
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
                     , containers
                     , mtl
                     , text
                     , gosh
  hs-source-dirs:      terminal_drawer
  default-language:    Haskell2010


Test-Suite test-gosh
    type:          exitcode-stdio-1.0
    main-is: Specs.hs
    default-language:    Haskell2010
    hs-source-dirs:      test    
    build-depends: base
                 , hspec
                 , gosh

  